# xbot_framework

./: .clang-format  .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  Dockerfile  LICENSE  Readme.md  package.xml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yaml
codegen/: CMakeLists.txt  README.md  requirements.txt
codegen/cmake/: AddMessage.cmake  AddService.cmake  AddServiceInterface.cmake
codegen/templates/: ServiceInterfaceTemplate.cpp  ServiceInterfaceTemplate.hpp  ServiceTemplate.cpp  ServiceTemplate.hpp  cogfiles.txt  rebuild_templates.sh  service.json
codegen/xbot_codegen/: xbot_codegen.py
example/: CMakeLists.txt
example/EchoService/: CMakeLists.txt  EchoService.cpp  EchoService.hpp  main.cpp  service.json
example/EchoServiceInterface/: CMakeLists.txt  EchoService.cpp  EchoService.hpp  service.json
example/TransactionalService/: CMakeLists.txt  TransactionalService.cpp  TransactionalService.hpp  main.cpp  service.json
example_interface_plugins/: CMakeLists.txt
example_interface_plugins/EchoServicePlugin/: CMakeLists.txt  main.cpp
examples/: CMakeLists.txt
examples/service-interface/: CMakeLists.txt
examples/service-interface/EchoServiceExample/: CMakeLists.txt  EchoServiceInterface.cpp  EchoServiceInterface.hpp  main.cpp
examples/service-interface/EchoServicePlugin/: CMakeLists.txt  EchoServiceInterface.hpp  main.cpp
examples/services/EchoService/: CMakeLists.txt  EchoService.cpp  EchoService.hpp  main.cpp  service.json
ext/: CMakeLists.txt
ext/crow/: CMakeLists.txt
include/: README.md
include/datatypes/: LogPayload.hpp
include/xbot/: config.hpp
include/xbot/datatypes/: ClaimPayload.hpp  LogPayload.hpp  XbotHeader.hpp
libxbot-service/: CMakeLists.txt  README.md
libxbot-service-interface/: CMakeLists.txt
libxbot-service-interface/include/xbot-service-interface/: Plugin.hpp  ServiceDiscovery.hpp  ServiceIO.hpp  ServiceInterfaceBase.hpp  Socket.hpp  XbotServiceInterface.hpp  endpoint_utils.hpp
libxbot-service-interface/include/xbot-service-interface/data/: ServiceIOInfo.hpp  ServiceInfo.hpp  ServiceInputInfo.hpp
libxbot-service-interface/src/: PlotJugglerBridge.cpp  PlotJugglerBridge.hpp  ServiceDiscovery.cpp  ServiceDiscoveryImpl.cpp  ServiceDiscoveryImpl.hpp  ServiceIO.cpp  ServiceIOImpl.hpp  ServiceInfo.cpp  ServiceInterfaceBase.cpp  Socket.cpp  XbotServiceInterface.cpp
libxbot-service/ext/etl/: CMakeLists.txt
libxbot-service/ext/ext/: CMakeLists.txt
libxbot-service/include/: Io.hpp  Lock.hpp  Service.hpp  ServiceIo.h
libxbot-service/include/portable/: packet.hpp  queue.hpp  socket.hpp  thread.hpp
libxbot-service/include/xbot-service/: Io.hpp  RemoteLogging.hpp  Service.hpp  ServiceIo.h
libxbot-service/include/xbot-service/portable/: mutex.hpp  socket.hpp  system.hpp  thread.hpp
libxbot-service/src/: Lock.cpp  RemoteLogging.cpp  Service.cpp  ServiceIo.cpp
libxbot-service/src/portable/linux/: Io.cpp  mutex.cpp  packet.cpp  queue.cpp  socket.cpp  system.cpp  thread.cpp
libxbot-service/src/portable/linux/include/xbot/: mutex_impl.hpp  packet_impl.hpp  queue_impl.hpp  system_impl.hpp  thread_impl.hpp
libxbot-service/test/: CMakeLists.txt
libxbot-service/test/QueueTests/: QueueTests.cpp
meta/: README.md
meta/service_interfaces/sensors/: README.md  imu_service.json
tools/Example/: CMakeLists.txt
tools/Example/src/: app.cpp
tools/LogViewer/: CMakeLists.txt
tools/LogViewer/src/: app.cpp  app.hpp
tools/xbot_control_hub/: CMakeLists.txt  CrowToSpeedlogHandler.hpp  GenericServiceInterface.cpp  GenericServiceInterface.hpp  PlotJugglerBridge.cpp  PlotJugglerBridge.hpp  ServiceDiscovery.cpp  ServiceDiscovery.hpp  ServiceDiscoveryImpl.cpp  ServiceDiscoveryImpl.hpp  ServiceIO.cpp  ServiceInfo.cpp  ServiceInfo.hpp  ServiceInputInfo.hpp  ServiceInterface.cpp  ServiceInterface.hpp  ServiceInterfaceBase.cpp  ServiceInterfaceBase.hpp  ServiceInterfaceFactory.cpp  ServiceInterfaceFactory.hpp  ServiceIoImpl.hpp  ServiceOutputInfo.hpp  Socket.cpp  Socket.hpp  endpoint_utils.hpp  main.cpp  main.hpp
tools/xbot_control_hub/data/: ServiceDescription.hpp  ServiceIOInfo.hpp  ServiceInfo.cpp  ServiceInfo.hpp  ServiceInputInfo.hpp
tools/xbot_control_hub/ext/: CMakeLists.txt
tools/xbot_control_hub/ext/cli/: CMakeLists.txt
tools/xbot_control_hub/ext/spdlog/: CMakeLists.txt
xbot-runtime/: CMakeLists.txt  CrowToSpeedlogHandler.hpp  PlotJugglerBridge.cpp  PlotJugglerBridge.hpp  main.cpp  main.hpp
xbot_comms/: CMakeLists.txt  README.md
xbot_comms/ext/: CMakeLists.txt
xbot_comms/ext/etl/: CMakeLists.txt
xbot_comms/include/: Io.hpp  Lock.hpp  RemoteLogging.hpp  Service.hpp  ServiceIo.h  config.hpp
xbot_comms/include/portable/: mutex.hpp  packet.hpp  queue.hpp  socket.hpp  system.hpp  thread.hpp
xbot_comms/src/: Lock.cpp  RemoteLogging.cpp  Service.cpp  ServiceIo.cpp
xbot_comms/src/portable/linux/: mutex.cpp  packet.cpp  queue.cpp  socket.cpp  system.cpp  thread.cpp
xbot_comms/src/portable/linux/include/xbot/: mutex_impl.hpp  packet_impl.hpp  queue_impl.hpp  socket_impl.hpp  system_impl.hpp  thread_impl.hpp
xbot_comms/test/: all_tests.cpp
xbot_comms/test/QueueTests/: QueueTests.cpp
