<?xml version="1.0"?>
<package format="2">
  <name>xbot_framework</name>
  <version>0.0.0</version>
  <description>The xbot_framework package</description>
  <maintainer email="clemens.elflein@googlemail.com">Clemens Elflein</maintainer>
  <license>MIT</license>

  <url type="website">https://github.com/ClemensElflein</url>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>python3-pip</buildtool_depend>
  <buildtool_depend>python3-venv</buildtool_depend>
  <build_depend>asio</build_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
